@@ -26,6 +26,8 @@ Extension Modules
 Library
 -------
 
+- The multifile module has been deprecated as per PEP 4.
+
 - The SocketServer module has been renamed 'socketserver'.  The old
   name is now deprecated.
 
